Hide scroll to prevent movement on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,5 @@
 html,
 body {
 	margin: 0;
+	overflow: hidden;
 }
-/* 
-#canvas {
-	border: 1px solid black;
-} */
